--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- font awesome -->
 
   <script src="https://kit.fontawesome.com/6f877c4710.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://github.com/HiManShU-989/TinDog/index.css">
 
   <!-- Google Fonts -->
 
@@ -33,7 +33,7 @@
     <!-- Nav Bar -->
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="https://himanshu-989.github.io/TinDog/">Tindog</a>
+        <a class="navbar-brand" href="https://himanshu-989.github.io/TinDog">Tindog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
               class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="iphone6.png" class="rotate30" alt="iphone-mockup">
+          <img src="https://github.com/HiManShU-989/TinDog/iphone6.png" class="rotate30" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -107,14 +107,14 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-image" src="dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="https://github.com/HiManShU-989/TinDog/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
 
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
             their life. I think.</h2>
-          <img class="testimonial-image" src="lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="https://github.com/HiManShU-989/TinDog/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
       </div>
@@ -133,10 +133,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="mashable.png" alt="mashable-logo">
-    <img class="press-logo" src="techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="https://github.com/HiManShU-989/TinDog/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="https://github.com/HiManShU-989/TinDog/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="https://github.com/HiManShU-989/TinDog/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="https://github.com/HiManShU-989/TinDog/techcrunch.png" alt="tc-logo">
 
   </section>
 
